[package]
name = "esp-embassy-test"
version = "0.1.0"
authors = ["Graicc <33105645+Graicc@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = "0.2.0"
embassy-executor = { version = "0.6.0", features = ["integrated-timers"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
embedded-sdmmc = "0.8.0"
esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "esp32", "async" ] }
esp-hal-embassy = { version = "0.3.0", features = [ "esp32" ] }
esp-println = { version = "0.11.0", features = ["esp32", "log"] }
heapless = { version = "0.8.0", features = ["ufmt"] }
log = { version = "0.4.21" }
mpu6050-dmp = { git = "https://github.com/barafael/mpu6050-dmp-rs", version = "0.4.0" }
static_cell = "2.1.0"
ufmt = "0.2.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
